<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.product.ProductFragment">

    <data>

        <variable
            name="viewModel"
            type="io.github.horaciocome1.leiloa.ui.product.ProductViewModel" />

        <variable
            name="product"
            type="io.github.horaciocome1.leiloa.data.product.Product" />
        
    </data>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add100Button"
                style="@style/MyWidget.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="@{product.active}"
                android:fontFamily="@font/roboto"
                android:onClick="@{() -> viewModel.increase100(product.topOffer)}"
                android:text="@string/_100_mt"
                android:textColor="@color/colorOrangeLight"
                app:icon="@drawable/outline_add_24"
                app:iconTint="@color/colorOrangeLight"
                app:rippleColor="@color/colorOrangeLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add500Button"
                style="@style/MyWidget.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="@{product.active}"
                android:fontFamily="@font/roboto"
                android:onClick="@{() -> viewModel.increase500(product.topOffer)}"
                android:text="@string/_500_mt"
                android:textColor="@color/colorOrange"
                app:icon="@drawable/outline_add_24"
                app:iconTint="@color/colorOrange"
                app:rippleColor="@color/colorOrange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add100Button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add1000Button"
                style="@style/MyWidget.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="@{product.active}"
                android:fontFamily="@font/roboto"
                android:onClick="@{() -> viewModel.increase1000(product.topOffer)}"
                android:text="@string/_1000_mt"
                android:textColor="@color/colorOrangeDark"
                app:icon="@drawable/outline_add_24"
                app:iconTint="@color/colorOrangeDark"
                app:rippleColor="@color/colorOrangeDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/add500Button" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/add100Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

</layout>